# arcflash

./: .gitignore  .gitmodules  DESIGN.md  Makefile  README.md
.github/workflows/: build.yml  cpld_test.yml  docker.yml  firmware_bootmenu.yml  host_mcu_comms_test.yml  python_source.yml  python_wheels.yml  wheels.yml
a5000_adapter_pcb/: a5000_adapter.py  fp-lib-table
bootloader/: .gitignore  README.md
bootloader/boards/myelin_arcflash/: board.mk  board_config.h
common/: Makefile.pcb  Makefile.xilinx  build_fab_outputs.py  setup_defaults.py
cpld/: Makefile  a3000_rom_emulator-xc95144xl-10-cs144.jed  a3000_rom_emulator-xc95144xl-10-cs144.svf  a3000_rom_emulator.v  a3000_rom_emulator.xst  arcflash_test.py  build.sh
docker/: Dockerfile
firmware/: .gitignore  Makefile  README.md  arduino-cli.yaml  build.py  build_and_upload.py  firmware.ino
firmware/hardware/myelin/: samd
host_mcu_comms/: Makefile  README.md  host_mcu_comms.cc  host_mcu_comms.h  host_mcu_comms_test.cc
os_switcher_bootloader/: .gitignore  Makefile  README.md  arcflash.h  arcflash.proto  arcregs.h  cmos.cc  descriptor.cc  display.cc  keyboard.h  main.cc  make_version_h.py  merge_binaries.py  printf.cc  start.s  test.cc
pcb/: Makefile  a3000_rom_emulator.kicad_pcb  a3000_rom_emulator.kicad_prl  a3000_rom_emulator.kicad_pro  a3000_rom_emulator.py  bill_of_materials.txt  readable_bill_of_materials.txt
python_lib/: .gitignore  MANIFEST.in  Makefile  _bossa.cc  bossa  bossa-wrapper  make_envs.sh  make_version_id.py  pyproject.toml  setup.py  upload.sh
python_lib/arcflash/: arcflash_pb2.py  config.py  cpld.svf  main.py  port.py  program_cpld.py  rombuild.py  uploader.py
python_lib/tests/: test_basic.py
release/: README.md
riscpc_adapter_pcb/: riscpc_adapter.kicad_pcb  riscpc_adapter.py
tools/: make_arc_rom.py  make_rpc_rom.py  test_serial_comms.py
